--- a/index.html
+++ b/index.html
@@ -12,34 +12,21 @@
         <h1>ToDo</h1>
         <div class="main">
             <div class="header">
-                <label for="toggle-all" class="label-all"></label>
+                <label class="toggle-all">❯</label>
                 <input class="newTask" placeholder="What do u want to do?">
             </div>
             <ul class="list">
                 <li>
                     <div class="view">
-                        <input class="toggle" type="checkbox">
-                        <label for="all">Завалить Рому вопросами</label>
+                        <div class="description">
+                            <label>
+                                <input class="toggle" type="checkbox">
+                                Завалить Рому вопросами
+                            </label>
+                        </div>
                     </div>
                 </li>
-                <li> 
-                    <div class="view">
-                        <input class="toggle" type="checkbox">
-                        <label for="all">Позвонить маме</label>
-                    </div>
-                </li>
-                <li>
-                    <div class="view">
-                        <input class="toggle" type="checkbox">
-                        <label for="all">Написать Todo</label>
-                    </div>
-                </li>
-                <li>
-                    <div class="view">
-                        <input class="toggle" type="checkbox">
-                        <label for="all">Ознакомиться с ТЗ по Трелло</label>
-                    </div>
-                </li>
+                
                 <div class="footer">
                     <span class="todo-count">
                         0
