--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                                 Завалить Рому вопросами
                             </label>
                         </div>
+                        <div class="button-edit">
+                            
+                        </div>
                     </div>
                 </li>
                 
