--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 <li>
                     <div class="view">
                         <input class="toggle" type="checkbox">
+                        <input class="input" type="text">
                         <label for="all">Завалить Рому вопросами</label>
+                        <button class="delete">X</button>
                     </div>
                 </li>
                 <li> 
